--- a/assembly/src/main/assembly/conf/proton.properties
+++ b/assembly/src/main/assembly/conf/proton.properties
@@ -7,6 +7,6 @@ app.protocol.rest.port=20882
 
 ##### jdbc #####
 master.jdbc.driver=com.mysql.jdbc.Driver
-master.jdbc.url=jdbc:mysql://127.0.0.1:3306/arch_proton
+master.jdbc.url=jdbc:mysql://127.0.0.1:3306/arch_proton?useSSL=false
 master.jdbc.username=root
-master.jdbc.password=root
+master.jdbc.password=
