remove qos server

--- a/app/rest-api-impl/src/test/resources/proton.properties
+++ b/app/rest-api-impl/src/test/resources/proton.properties
@@ -1,5 +1,5 @@
 ##### dubbo #####
-app.name=proton
+app.name=proton-provider
 app.owner=glowd
 app.registry.address=zookeeper://127.0.0.1:2181
 app.protocol.rest.name=rest
@@ -7,6 +7,6 @@ app.protocol.rest.port=20882
 
 ##### jdbc #####
 master.jdbc.driver=com.mysql.jdbc.Driver
-master.jdbc.url=jdbc:mysql://127.0.0.1:3306/arch_proton?useUnicode=true&characterEncoding=utf8&autoReconnect=true
+master.jdbc.url=jdbc:mysql://127.0.0.1:3306/arch_proton?useSSL=false
 master.jdbc.username=root
 master.jdbc.password=
